# backend

./: .clippy.toml  .env  .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml  test_api.sh
.github/workflows/: rust-ci.yml
scripts/: pre-commit.sh
src/: main.rs
src/config/: database.rs  mod.rs
src/handlers/: stats.rs
src/middleware/: auth.rs  logging.rs
src/models/: business.rs  drone.rs  location.rs  mod.rs  order.rs  product.rs  stats.rs  trip.rs  user.rs
src/routes/: login.rs  mod.rs  protected.rs  register.rs
src/routes/business/: delete.rs  list.rs  mod.rs  register.rs  set_location.rs  update.rs
src/routes/drones/: delete.rs  list_drones.rs  mod.rs  register.rs
src/routes/orders/: register.rs
src/routes/product/: delete.rs  list_by_business.rs  mod.rs  register.rs  update.rs
src/routes/stats/: mod.rs  stats.rs  stats_.rs
src/routes/trips/: register.rs
src/routes/users/: delete.rs  login.rs  mod.rs  register.rs  update.rs
