[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.134"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
async-trait = "0.1.83"
